[gd_scene load_steps=11 format=3 uid="uid://8gg5knyx0li8"]

[ext_resource type="Script" path="res://Objects/Zones/DeathZone.gd" id="1_2jp3y"]
[ext_resource type="Script" path="res://Actors/shooter_bullet.gd" id="1_6volf"]
[ext_resource type="Texture2D" uid="uid://ccdehhh4wo1va" path="res://Assets/Images/Inimigo1.png" id="3_hdis0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gv57s"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fjn0y"]
radius = 4.12311

[sub_resource type="Animation" id="Animation_g4nlk"]
resource_name = "existing"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(2, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.227451, 0.0313726, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5jhte"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(2, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_xm6rk"]
resource_name = "falling"
length = 0.8
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(3, 4), Vector2i(4, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ufae7"]
resource_name = "spawning"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.21),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dn6b1"]
_data = {
"RESET": SubResource("Animation_5jhte"),
"existing": SubResource("Animation_g4nlk"),
"falling": SubResource("Animation_xm6rk"),
"spawning": SubResource("Animation_ufae7")
}

[node name="ShooterBullet" type="CharacterBody2D"]
script = ExtResource("1_6volf")

[node name="DeathZone" type="Area2D" parent="."]
script = ExtResource("1_2jp3y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
shape = SubResource("CircleShape2D_gv57s")
debug_color = Color(0.996078, 0, 0.168627, 0.419608)

[node name="BreakArea" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="BreakArea"]
shape = SubResource("CircleShape2D_fjn0y")
debug_color = Color(0.607843, 0.537255, 0.0431373, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dn6b1")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_hdis0")
hframes = 5
vframes = 5
frame = 22

[connection signal="body_entered" from="DeathZone" to="." method="_on_death_zone_body_entered"]
[connection signal="player_killed" from="DeathZone" to="." method="_on_death_zone_player_killed"]
[connection signal="area_entered" from="BreakArea" to="." method="_on_break_area_area_entered"]
